syntax = "proto2";

package proto.data;

message CrossColumnPairgrams {
  repeated string input_columns = 1;
  required string output_column = 2;
  required uint64 hash_range = 3;
}